@@ -1,3 +1,7 @@
+2005-11-18  Bernd Schmidt  <bernd.schmidt@analog.com>
+
+	* config/bfin/crtlibid.s: New file.
+
 2005-11-17  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	PR target/24348
